Fix TOC height on mobile

--- a/_sass/parts/toc.scss
+++ b/_sass/parts/toc.scss
@@ -23,6 +23,7 @@
     position: inherit;
     padding-bottom: 2rem;
     border-bottom: 1px solid var(--button-hover-outline);
+    max-height: 30vh;
   }
 }
 
